2008-04-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (parse_primary_expression) src/parse.h:
	Track highest data column referred to in an expression.

	* src/datafile.c (plot_option_using): Use info returned by perm_at()
	to update the highest data column used.  This allows us to catch at
	least the simple case of autotitle columnheader for 'using 1:($3)'.
	Deletion previous ugly code to approximate this for binary files.
	Bug #1929227

	* term/post.trm (PS_set_font): Avoid segfault if the font name is longer
	than 32 characters.  The {ai grass next openstep} terminals suffer from
	the same problem, but since they are moribund just let it go.
	Bug #1935919

	* term/gd.trm: Track ttf font names using dynamically-allocated strings
	rather than fixed arrays.
	Bug #1935919

	* src/datafile.c (expect_string):  Dead code (test is invariably false)
	* docs/gnuplot.doc: Remove redundant links to shell/system section
	* term/emf.trm: Remove dead code
	* term/pbm.trm: Document that output image size is padded to nearest
	  multiple of 8 pixels on both x and y.

	* docs/gnuplot.texi:  Sync to current docs

2008-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Yet one more place ymax -> ymax-1.

2008-04-05  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graphics.c (boundary): Missing cast to (int) for ytop.

2008-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary) src/color.c (draw_color_smooth_box):
	The coding guide for terminals in term/README clearly states:
	    xmax is the maximum number of points in the x direction.
	    The range of points used by gnuplot is 0 to xmax-1.
	The boundary calculations were instead scaling the right and top edges
	to term->xmax and term->ymax, so in the absence of margins these two
	border lines would lie off the edge of the plot.  This fix replaces
	term-xmax with term->xmax-1 in the boundary calculations, similarly for